--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,6 @@ authors = ["Tyler Richie <TylerRichie@github.com>"]
 
 [dependencies]
 num = "0.1"
-error-chain = "0.11.0"
+error-chain = "0.11"
+rand = "0.3"
+mersenne_twister = "1.1"
